# perlin

./: CMakeLists.txt  main.cpp  main.py  part1.cpp  part2.cpp  part3.cpp  tasks.h
